# bioentro-suite

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pangentro.py  pyproject.toml  run_panaroo.sh
.github/workflows/: ci.yml
bioentro/: __init__.py  bioentro.py  netentro.py  pangentro.py  preparo.py
pa_mexico/: assembly_data_report.jsonl  dataset_catalog.json  md5sum.txt
resultados_pangenoma/: combined_protein_cdhit_out.txt  combined_protein_cdhit_out.txt.clstr  gene_presence_absence.Rtab  gene_presence_absence.csv  gene_presence_absence_roary.csv  struct_presence_absence.Rtab  summary_statistics.txt
tests/: test_bioentro.py  test_netentro.py  test_pangentro.py
