[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioentro"
version = "1.0.0"
description = "Informational complexity and entropy analysis for genomic and proteomic data."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

dependencies = [
"biopython>=1.80",
"pandas>=1.5.0"
]

[[project.authors]]
name = "Julio Méndez"
email = "jcmenjr@gmail.com"

[project.scripts]
bioentro = "bin.bioentro:main"

[tool.setuptools]
packages = ["bin"]