[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project metadata ──────────────────────────────────────────────────────────
[project]
name            = "bioentro-suite"
version         = "0.3.1"
description     = "Informational Analysis Suite for Biological Sequences"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
    { name = "Julio Méndez", email = "jcmenjr@gmail.com" },
]

keywords = [
    "bioinformatics",
    "information-theory",
    "shannon-entropy",
    "protein",
    "genomics",
    "pseudomonas",
    "pangenomics",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# ── Runtime dependencies ──────────────────────────────────────────────────────
dependencies = [
    "biopython>=1.79",
    "pandas>=1.5",
    "numpy>=1.23",
    "networkx>=3.0",
    "matplotlib>=3.6",
    "scipy>=1.9",
    "scikit-learn>=1.1",
]

# ── Optional / development dependencies ──────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",           # linter + formatter
    "mypy>=1.0",           # type checker
    "pandas-stubs",
]

# ── CLI entry points (these become shell commands after pip install) ──────────
[project.scripts]
bioentro = "bioentro.bioentro:main"
netentro = "bioentro.netentro:main"
preparo  = "bioentro.preparo:main"
pangentro = "bioentro.pangentro:main"

# ── Package discovery ─────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["bioentro*"]

# ── Ruff (linter) configuration ───────────────────────────────────────────────
[tool.ruff]
line-length    = 99
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]   # line length handled by formatter

# ── Mypy (type checker) configuration ────────────────────────────────────────
[tool.mypy]
python_version         = "3.9"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true   # numpy/scipy stubs not always available

# ── Pytest configuration ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"