[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pangentro"
version = "0.5.0"
description = "anvi'o-native informational prioritization of hypothetical proteins in microbial pangenomes"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
# TODO
authors = [{ name = "jcmenjr", email = "jcmenjr@gmail.com" }]
keywords = [
    "bioinformatics", "pangenomics", "anvio", "hypothetical-proteins",
    "information-theory", "jensen-shannon", "eggnog",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
]

[project.optional-dependencies]
# `compare` and its figure need scipy/matplotlib; tests exercise both.
stats = ["scipy>=1.9", "matplotlib>=3.6"]
test = ["pytest>=7", "scipy>=1.9", "matplotlib>=3.6"]

[project.urls]
Homepage = "https://github.com/jcmenjr/bioentro-suite"
Repository = "https://github.com/jcmenjr/bioentro-suite"
Issues = "https://github.com/jcmenjr/bioentro-suite/issues"

[project.scripts]
pangentro = "pangentro:main"

[tool.setuptools]
# Flat layout: pangentro is a single top-level module.
py-modules = ["pangentro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make `pytest` find the top-level pangentro module without an editable install.
pythonpath = ["."]
